# fcl

./: .gitignore  AGENTS.md  Cargo.toml  README.md  specs.md
crates/cli/: Cargo.toml
crates/cli/src/: bench.rs  main.rs
crates/cli/tests/: cli_boundaries.rs
crates/core/: Cargo.toml
crates/core/src/: archive.rs  clone.rs  compression.rs  error.rs  git_object.rs  lib.rs  local.rs  metrics.rs
crates/core/src/checkout/: mod.rs
crates/core/src/pack/: mod.rs
crates/core/src/protocol/: mod.rs  pkt_line.rs  smart_http.rs
crates/core/src/repo/: mod.rs
docs/: compression-backends.md  current-architecture.md  ref-based-sharding.md
scripts/: bench-flate2-backends.sh
