[package]
name = "fcl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
fcl-core = { path = "../core" }

[dev-dependencies]
tempfile = "3.22.0"

[lints]
workspace = true

[features]
default = ["fcl-core/default"]
flate2-rust = ["fcl-core/flate2-rust"]
flate2-miniz-oxide = ["fcl-core/flate2-miniz-oxide"]
flate2-zlib = ["fcl-core/flate2-zlib"]
flate2-zlib-default = ["fcl-core/flate2-zlib-default"]
flate2-zlib-ng = ["fcl-core/flate2-zlib-ng"]
flate2-zlib-ng-compat = ["fcl-core/flate2-zlib-ng-compat"]
flate2-zlib-rs = ["fcl-core/flate2-zlib-rs"]
