[package]
name = "fcl-core"
version = "0.1.0"
edition = "2024"

[dependencies]
crc32fast = "1.5.0"
flate2 = { version = "1.1.5", default-features = false }
hex = "0.4.3"
memory-stats = "1.2.0"
rayon = "1.11.0"
reflink-copy = "0.1.30"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "hickory-dns", "rustls-tls"] }
sha1 = "0.10.6"
thiserror = "2.0.16"
url = "2.5.7"

[lints]
workspace = true

[features]
default = ["flate2-zlib"]
flate2-rust = ["flate2/rust_backend"]
flate2-miniz-oxide = ["flate2/miniz_oxide"]
flate2-zlib = ["flate2/zlib"]
flate2-zlib-default = ["flate2/zlib-default"]
flate2-zlib-ng = ["flate2/zlib-ng"]
flate2-zlib-ng-compat = ["flate2/zlib-ng-compat"]
flate2-zlib-rs = ["flate2/zlib-rs"]
